Fix active menu item invisible

--- a/src/style.less
+++ b/src/style.less
@@ -70,6 +70,7 @@ body {
         .active {
             background: none;
             font-weight: bold;
+            color: inherit;
         }
 
         :active {
